# CODDE

./: CMakeLists.txt  README.md
input/: default.json  gen_input.py  inp_bdip.mat  inp_delr.mat  inp_etaa.mat  inp_etal.mat  inp_etar.mat  inp_expn.mat  inp_hams.mat  inp_mode.mat  inp_pdip1.mat  inp_qmds.mat  inp_sdip.mat  input.json
input/scripts/: BoseFermiExpansion.py  armadillo.py  bath.py  syst.py
src/apps/: corr.cpp  td-rhot.cpp
src/codde/: CMakeLists.txt  rem.cpp  rem.hpp
td-rhot/: gen_input.py
